Starting the use of templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Home</title>
-        <link rel="stylesheet" href="/public/css/site.css">
+        <link rel="stylesheet" href="/css/site.css">
     </head>
     <body>
         <h2>Home Page</h2>
